--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage" : "https://amkhurana.github.io/firstreact/",
   "eslintConfig": {
     "extends": "react-app"
   },
