--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sample1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -9,7 +10,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^9.1.2",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.2",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -27,7 +28,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage" : "https://amkhurana.github.io/firstreact/",
   "eslintConfig": {
     "extends": "react-app"
   },
